--- a/Windows/ctags.cnf
+++ b/Windows/ctags.cnf
@@ -1,7 +1,7 @@
 --langdef=powershell
 --langmap=powershell:.ps1.psm1
 --regex-powershell=/^\s*[Ff]unction[\t ]*([a-zA-Z0-9_-]+)/\1/f,function/
---regex-powershell=/^.* ([a-zA-Z]+-[a-zA-Z]+)/\1/h,functionCall/
+--regex-powershell=/^.* ([a-zA-Z]+-[a-zA-Z0-9_]+)/\1/h,functionCall/
 --regex-powershell=/^\s*[Ff]ilter[\t ]*([a-zA-Z0-9_-]+)/\1/i,filter/
 --regex-powershell=/^\s*[sS]et-[Aa]lias[\t ]*([a-zA-Z0-9_-]+)/\1/a,alias/
 --regex-powershell=/^\s*#[rR]egion[\t ]*([a-zA-Z0-9_ -]+)\s*$/\1/r,region/
