--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -29,6 +29,7 @@
   <package id="LinkShellExtension" version="3.9.3.5" />
   <package id="nodejs" version="15.14.0" />
   <package id="nodejs.install" version="15.14.0" />
+  <package id="openhardwaremonitor" version="0.9.6.20210201" />
   <package id="postman" version="8.0.10" />
   <package id="powershell-core" version="7.1.3.20210315" />
   <package id="putty" version="0.74" />
