--- a/Windows/Chocolatey/packages.config
+++ b/Windows/Chocolatey/packages.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package Id="7-taskbar-tweaker" />
   <package Id="7zip" />
