Adding configurations for auto setup of programs

--- a/Rainmeter/Skins/Network/Network.ini
+++ b/Rainmeter/Skins/Network/Network.ini
@@ -68,8 +68,8 @@ DynamicVariables=1
 ; Check the IP against the undesired list, If found, keep checking.
 [MeasureCheckNICforChange]
 Measure=Calc
-Formula=([MeasureIPPrefix] = 0) ? 1 : 0 
-;Formula=([MeasureIPPrefix] = 192) ? 1 : (([MeasureIPPrefix] = 1) ? 1 : 0)
+;Formula=([MeasureIPPrefix] = 0) ? 1 : 0 
+Formula=([MeasureInternIPPrefix] = 127) ? 1 : (([MeasureInternIPPrefix] = 1) ? 1 : 0)
 DynamicVariables=1
 
 ; Increment through all the NICs (0 -7), change the 7 to the highest NIC number you have
