--- a/Rainmeter/Skins/System/System.ini
+++ b/Rainmeter/Skins/System/System.ini
@@ -47,6 +47,27 @@ UpdateDivider=20
 Measure=SwapMemory
 UpdateDivider=20
 
+[measureTopGPU]
+Measure=Plugin
+Plugin=UsageMonitor
+Alias=GPU
+Index=1
+MinValue=0
+MaxValue=100
+Blacklist=dwm|csrss
+
+[measureTotalVRAM]
+Measure=Plugin
+Plugin=UsageMonitor
+Alias=VRAM
+Index=0
+MinValue=0
+MaxValue=4831838208
+
+[measureTotalVRAMScaled]
+Measure=Calc
+Formula=measureTotalVRAM
+
 [measureUptime]
 Measure=Uptime
 Format="%4!i!d - %3!02i!:%2!02i!:%1!02i!"
@@ -214,11 +235,33 @@ Y=92
 W=190
 H=1
 
-[meterLabelBatteryPercent]
+[meterLabelTotalVRAM]
 Meter=String
 MeterStyle=styleLeftText
 X=10
 Y=100
+W=190
+H=14
+Text=Total VRAM Usage:
+
+[meterValueTotalVRAM]
+Meter=String
+MeterStyle=styleRightText
+MeasureName=measureTotalVRAMScaled
+X=200
+Y=0r
+W=190
+H=14
+AutoScale=1
+NumOfDecimals=1
+Text=%1B
+
+
+[meterLabelBatteryPercent]
+Meter=String
+MeterStyle=styleLeftText
+X=10
+Y=120
 W=190
 H=14
 Text="Battery:"
@@ -238,7 +281,7 @@ Meter=Bar
 MeterStyle=styleBar
 MeasureName=MeasureBatteryPercent
 X=10
-Y=112
+Y=132
 W=190
 H=1
 
@@ -246,7 +289,7 @@ H=1
 Meter=String
 MeterStyle=styleLeftText
 X=10
-Y=120
+Y=140
 W=190
 H=14
 Text=Uptime
