chocolatey packages update.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
    <package id="7zip" />
-   <package id="7zip.install" />
    <package id="adexplorer" />
    <package id="autohotkey" />
    <package id="autohotkey.install" />
@@ -20,6 +19,7 @@
    <package id="chocolatey-misc-helpers.extension" />
    <package id="chocolatey-windowsupdate.extension" />
    <package id="chocolatey.extension" />
+   <package id="chocolateygui" />
    <package id="cloc" />
    <package id="Cmder" />
    <package id="ConEmu" />
@@ -66,10 +66,8 @@
    <package id="KB3035131" />
    <package id="KB3118401" />
    <package id="LinkShellExtension" />
-   <package id="logitech-options" />
    <package id="lua" />
    <package id="magicsplat-tcl-tk" />
-   <package id="meld" />
    <package id="microsoft-teams" />
    <package id="miktex" />
    <package id="miktex.install" />
@@ -84,9 +82,10 @@
    <package id="openhardwaremonitor" />
    <package id="openssh" />
    <package id="openssl" />
-   <package id="pandoc" />
    <package id="postman" />
    <package id="powershell-core" />
+   <package id="procexp" />
+   <package id="procmon" />
    <package id="putty" />
    <package id="putty.portable" />
    <package id="pwsh" />
@@ -104,6 +103,7 @@
    <package id="sql-server-management-studio" />
    <package id="strawberryperl" />
    <package id="tortoisegit" />
+   <package id="treesizefree" />
    <package id="universal-ctags" />
    <package id="vcredist140" />
    <package id="vcredist2005" />
