--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -6,10 +6,14 @@
    <package id="autohotkey.install" />
    <package id="autohotkey.portable" />
    <package id="cascadiacode" />
+   <package id="cascadiacodeitalic" />
    <package id="cascadiacodepl" />
+   <package id="cascadiacodepl-italic" />
    <package id="cascadiafonts" />
    <package id="cascadiamono" />
+   <package id="cascadiamonoitalic" />
    <package id="cascadiamonopl" />
+   <package id="cascadiamonopl-italic" />
    <package id="checksum" />
    <package id="choco-cleaner" />
    <package id="chocolatey" />
@@ -22,7 +26,6 @@
    <package id="chocolateygui" />
    <package id="cloc" />
    <package id="Cmder" />
-   <package id="ConEmu" />
    <package id="coretemp" />
    <package id="cpu-z" />
    <package id="cpu-z.install" />
@@ -36,6 +39,7 @@
    <package id="dotnet4.7.2" />
    <package id="dotnetfx" />
    <package id="dotpeek.portable" />
+   <package id="Everything" />
    <package id="f.lux" />
    <package id="f.lux.install" />
    <package id="fiddler" />
