--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -5,6 +5,7 @@
    <package id="autohotkey" />
    <package id="autohotkey.install" />
    <package id="autohotkey.portable" />
+   <package id="azure-functions-core-tools" />
    <package id="cascadiacode" />
    <package id="cascadiacodeitalic" />
    <package id="cascadiacodepl" />
@@ -16,7 +17,6 @@
    <package id="cascadiamonopl-italic" />
    <package id="checksum" />
    <package id="choco-cleaner" />
-   <package id="chocolatey" />
    <package id="chocolatey-core.extension" />
    <package id="chocolatey-dotnetfx.extension" />
    <package id="chocolatey-font-helpers.extension" />
@@ -39,7 +39,6 @@
    <package id="dotnet4.7.2" />
    <package id="dotnetfx" />
    <package id="dotpeek.portable" />
-   <package id="Everything" />
    <package id="f.lux" />
    <package id="f.lux.install" />
    <package id="fiddler" />
@@ -47,6 +46,7 @@
    <package id="FiraCode" />
    <package id="font-hackgen" />
    <package id="font-hackgen-nerd" />
+   <package id="free-hex-editor-neo" />
    <package id="gawk" />
    <package id="git" />
    <package id="git.install" />
@@ -56,6 +56,7 @@
    <package id="grep" />
    <package id="html-tidy" />
    <package id="hwmonitor" />
+   <package id="hxd" />
    <package id="ilspy" />
    <package id="javaruntime" />
    <package id="jdk8" />
