--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -115,5 +115,6 @@
    <package id="vcredist2017" />
    <package id="vim" />
    <package id="visualstudio2019-remotetools" />
+   <package id="windirstat" />
    <package id="xsltproc" />
 </packages>
