--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
    <package id="7zip" />
+   <package id="7zip.install" />
    <package id="adexplorer" />
    <package id="autohotkey" />
    <package id="autohotkey.install" />
@@ -17,6 +18,7 @@
    <package id="cascadiamonopl-italic" />
    <package id="checksum" />
    <package id="choco-cleaner" />
+   <package id="chocolatey" />
    <package id="chocolatey-core.extension" />
    <package id="chocolatey-dotnetfx.extension" />
    <package id="chocolatey-font-helpers.extension" />
@@ -115,6 +117,7 @@
    <package id="vcredist2017" />
    <package id="vim" />
    <package id="visualstudio2019-remotetools" />
+   <package id="vscode" />
+   <package id="vscode.install" />
    <package id="windirstat" />
-   <package id="xsltproc" />
 </packages>
