modifications to keep-awake

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -50,6 +50,7 @@
    <package id="font-hackgen-nerd" />
    <package id="gawk" />
    <package id="git" />
+   <package id="git-credential-manager-for-windows" />
    <package id="git.install" />
    <package id="golang" />
    <package id="GoogleChrome" />
