Adding httpie to work chocolatey packages.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -57,6 +57,7 @@
    <package id="greenshot" />
    <package id="grep" />
    <package id="html-tidy" />
+   <package id="httpie" />
    <package id="hwmonitor" />
    <package id="hxd" />
    <package id="ilspy" />
