--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -54,6 +54,7 @@
    <package id="git.install" />
    <package id="golang" />
    <package id="GoogleChrome" />
+   <package id="googler" />
    <package id="greenshot" />
    <package id="grep" />
    <package id="html-tidy" />
