--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -27,6 +27,8 @@
    <package id="chocolatey.extension" />
    <package id="chocolateygui" />
    <package id="cloc" />
+   <package id="cmake" />
+   <package id="cmake.install" />
    <package id="Cmder" />
    <package id="coretemp" />
    <package id="cpu-z" />
@@ -96,7 +98,6 @@
    <package id="procmon" />
    <package id="putty" />
    <package id="putty.portable" />
-   <package id="pwsh" />
    <package id="python" />
    <package id="python2" />
    <package id="python3" />
