work chocolatey packages list.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -37,6 +37,7 @@
    <package id="Cygwin" />
    <package id="dngrep" />
    <package id="dos2unix" />
+   <package id="dotcover-cli" />
    <package id="DotNet4.5.2" />
    <package id="DotNet4.6.1" />
    <package id="dotnet4.7.1" />
