work chocolatey packages list.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -121,6 +121,7 @@
    <package id="vcredist2017" />
    <package id="vim" />
    <package id="visualstudio2019-remotetools" />
+   <package id="vlc" />
    <package id="vscode" />
    <package id="vscode.install" />
    <package id="windirstat" />
