updating packages_work.config

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -22,7 +22,6 @@
    <package id="chocolatey-core.extension" />
    <package id="chocolatey-dotnetfx.extension" />
    <package id="chocolatey-font-helpers.extension" />
-   <package id="chocolatey-misc-helpers.extension" />
    <package id="chocolatey-windowsupdate.extension" />
    <package id="chocolatey.extension" />
    <package id="chocolateygui" />
@@ -106,7 +105,6 @@
    <package id="ruby" />
    <package id="sed" />
    <package id="slack" />
-   <package id="soapui" />
    <package id="SourceCodePro" />
    <package id="sourcetree" />
    <package id="sql-server-management-studio" />
@@ -125,4 +123,6 @@
    <package id="vscode" />
    <package id="vscode.install" />
    <package id="windirstat" />
+   <package id="winscp" />
+   <package id="winscp.install" />
 </packages>
