Adding VS2019 settings file.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -19,11 +19,12 @@
    <package id="checksum" />
    <package id="choco-cleaner" />
    <package id="chocolatey" />
+   <package id="chocolatey-compatibility.extension" />
    <package id="chocolatey-core.extension" />
    <package id="chocolatey-dotnetfx.extension" />
    <package id="chocolatey-font-helpers.extension" />
+   <package id="chocolatey-visualstudio.extension" />
    <package id="chocolatey-windowsupdate.extension" />
-   <package id="chocolatey.extension" />
    <package id="chocolateygui" />
    <package id="cloc" />
    <package id="cmake" />
@@ -40,7 +41,6 @@
    <package id="DotNet4.5.2" />
    <package id="DotNet4.6.1" />
    <package id="dotnet4.7.1" />
-   <package id="dotnet4.7.2" />
    <package id="dotnetfx" />
    <package id="dotpeek.portable" />
    <package id="f.lux" />
@@ -89,6 +89,8 @@
    <package id="nodejs.install" />
    <package id="notepadplusplus" />
    <package id="notepadplusplus.install" />
+   <package id="NTop.Portable" />
+   <package id="nvs" />
    <package id="openhardwaremonitor" />
    <package id="openssh" />
    <package id="openssl" />
@@ -103,6 +105,7 @@
    <package id="python3" />
    <package id="rainmeter" />
    <package id="ruby" />
+   <package id="ruby.install" />
    <package id="sed" />
    <package id="slack" />
    <package id="SourceCodePro" />
@@ -118,11 +121,13 @@
    <package id="vcredist2015" />
    <package id="vcredist2017" />
    <package id="vim" />
+   <package id="visualstudio-installer" />
+   <package id="visualstudio2017buildtools" />
    <package id="visualstudio2019-remotetools" />
-   <package id="vlc" />
    <package id="vscode" />
    <package id="vscode.install" />
    <package id="windirstat" />
    <package id="winscp" />
    <package id="winscp.install" />
+   <package id="zoom" />
 </packages>
