--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -94,6 +94,7 @@
    <package id="openhardwaremonitor" />
    <package id="openssh" />
    <package id="openssl" />
+   <package id="perfview" />
    <package id="postman" />
    <package id="powershell-core" />
    <package id="procexp" />
@@ -126,6 +127,7 @@
    <package id="visualstudio2019-remotetools" />
    <package id="vscode" />
    <package id="vscode.install" />
+   <package id="Wget" />
    <package id="windirstat" />
    <package id="winscp" />
    <package id="winscp.install" />
