--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -48,6 +48,7 @@
    <package id="fiddler" />
    <package id="filezilla" />
    <package id="FiraCode" />
+   <package id="Firefox" />
    <package id="font-hackgen" />
    <package id="font-hackgen-nerd" />
    <package id="gawk" />
@@ -129,7 +130,9 @@
    <package id="vscode.install" />
    <package id="Wget" />
    <package id="windirstat" />
+   <package id="WinPcap" />
    <package id="winscp" />
    <package id="winscp.install" />
+   <package id="wireshark" />
    <package id="zoom" />
 </packages>
