--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -126,6 +126,8 @@
    <package id="visualstudio-installer" />
    <package id="visualstudio2017buildtools" />
    <package id="visualstudio2019-remotetools" />
+   <package id="vlc" />
+   <package id="vlc.install" />
    <package id="vscode" />
    <package id="vscode.install" />
    <package id="Wget" />
