adding Jabra_Mute. Other minor changes.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -39,10 +39,10 @@
    <package id="dos2unix" />
    <package id="dotcover-cli" />
    <package id="DotNet4.5.2" />
-   <package id="DotNet4.6.1" />
    <package id="dotnet4.7.1" />
    <package id="dotnetfx" />
    <package id="dotpeek.portable" />
+   <package id="equalizerapo" />
    <package id="f.lux" />
    <package id="f.lux.install" />
    <package id="fiddler" />
@@ -114,6 +114,7 @@
    <package id="sourcetree" />
    <package id="sql-server-management-studio" />
    <package id="strawberryperl" />
+   <package id="telnet" />
    <package id="tortoisegit" />
    <package id="treesizefree" />
    <package id="universal-ctags" />
