updating package_work.config for chocolatey.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -79,6 +79,7 @@
    <package id="LinkShellExtension" />
    <package id="lua" />
    <package id="magicsplat-tcl-tk" />
+   <package id="meld" />
    <package id="microsoft-teams" />
    <package id="miktex" />
    <package id="miktex.install" />
@@ -112,6 +113,8 @@
    <package id="slack" />
    <package id="SourceCodePro" />
    <package id="sourcetree" />
+   <package id="spicetify-cli" />
+   <package id="spicetify-marketplace" />
    <package id="sql-server-management-studio" />
    <package id="strawberryperl" />
    <package id="telnet" />
