updating package_work.config for chocolatey.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -77,6 +77,7 @@
    <package id="KB3035131" />
    <package id="KB3118401" />
    <package id="LinkShellExtension" />
+   <package id="logitechgaming" />
    <package id="lua" />
    <package id="magicsplat-tcl-tk" />
    <package id="meld" />
