updates to work packages.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -45,6 +45,8 @@
    <package id="equalizerapo" />
    <package id="f.lux" />
    <package id="f.lux.install" />
+   <package id="fastcopy" />
+   <package id="fastcopy.portable" />
    <package id="fiddler" />
    <package id="filezilla" />
    <package id="FiraCode" />
@@ -114,8 +116,6 @@
    <package id="slack" />
    <package id="SourceCodePro" />
    <package id="sourcetree" />
-   <package id="spicetify-cli" />
-   <package id="spicetify-marketplace" />
    <package id="sql-server-management-studio" />
    <package id="strawberryperl" />
    <package id="telnet" />
