--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -38,6 +38,8 @@
    <package id="dngrep" />
    <package id="dos2unix" />
    <package id="dotcover-cli" />
+   <package id="dotnet-6.0-desktopruntime" />
+   <package id="dotnet-desktopruntime" />
    <package id="DotNet4.5.2" />
    <package id="dotnet4.7.1" />
    <package id="dotnetfx" />
@@ -77,6 +79,7 @@
    <package id="KB2999226" />
    <package id="KB3033929" />
    <package id="KB3035131" />
+   <package id="KB3063858" />
    <package id="KB3118401" />
    <package id="LinkShellExtension" />
    <package id="logitechgaming" />
@@ -95,6 +98,7 @@
    <package id="notepadplusplus" />
    <package id="notepadplusplus.install" />
    <package id="NTop.Portable" />
+   <package id="NugetPackageExplorer" />
    <package id="nvs" />
    <package id="openhardwaremonitor" />
    <package id="openssh" />
@@ -102,6 +106,7 @@
    <package id="perfview" />
    <package id="postman" />
    <package id="powershell-core" />
+   <package id="powertoys" />
    <package id="procexp" />
    <package id="procmon" />
    <package id="putty" />
