Adding new programs for work chocolatey config.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -38,13 +38,14 @@
    <package id="dngrep" />
    <package id="dos2unix" />
    <package id="dotcover-cli" />
-   <package id="dotnet-6.0-desktopruntime" />
+   <package id="dotnet-7.0-desktopruntime" />
    <package id="dotnet-desktopruntime" />
    <package id="DotNet4.5.2" />
    <package id="dotnet4.7.1" />
    <package id="dotnetfx" />
    <package id="dotpeek.portable" />
    <package id="equalizerapo" />
+   <package id="eventghost" />
    <package id="f.lux" />
    <package id="f.lux.install" />
    <package id="fastcopy" />
