updating work chocolatey config.

--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -67,6 +67,7 @@
    <package id="grep" />
    <package id="html-tidy" />
    <package id="httpie" />
+   <package id="httpmaster-express" />
    <package id="hwmonitor" />
    <package id="hxd" />
    <package id="ilspy" />
@@ -112,14 +113,17 @@
    <package id="procmon" />
    <package id="putty" />
    <package id="putty.portable" />
+   <package id="pwsh" />
    <package id="python" />
    <package id="python2" />
    <package id="python3" />
+   <package id="python311" />
    <package id="rainmeter" />
    <package id="ruby" />
    <package id="ruby.install" />
    <package id="sed" />
    <package id="slack" />
+   <package id="soapui" />
    <package id="SourceCodePro" />
    <package id="sourcetree" />
    <package id="sql-server-management-studio" />
