updating packages_work_new.config

--- a/Windows/Chocolatey/packages_work_new.config
+++ b/Windows/Chocolatey/packages_work_new.config
@@ -72,9 +72,10 @@
    <package id="openhardwaremonitor" />
    <package id="openssh" />
    <package id="powershell-core" />
-   <package id="powertoys" />
    <package id="procexp" />
    <package id="procmon" />
+   <package id="putty" />
+   <package id="putty.portable" />
    <package id="pwsh" />
    <package id="python" />
    <package id="python2" />
