updating packages_work_new.config

--- a/Windows/Chocolatey/packages_work_new.config
+++ b/Windows/Chocolatey/packages_work_new.config
@@ -89,6 +89,7 @@
    <package id="slack" />
    <package id="soapui" />
    <package id="telnet" />
+   <package id="universal-ctags" />
    <package id="vcredist140" />
    <package id="vcredist2005" />
    <package id="vcredist2010" />
