--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -3,74 +3,55 @@
    <package id="7zip" />
    <package id="7zip.install" />
    <package id="adexplorer" />
-   <package id="autohotkey" />
-   <package id="autohotkey.install" />
+   <package id="adobereader" />
    <package id="autohotkey.portable" />
    <package id="azure-functions-core-tools" />
-   <package id="cascadiacode" />
-   <package id="cascadiacodeitalic" />
-   <package id="cascadiacodepl" />
-   <package id="cascadiacodepl-italic" />
-   <package id="cascadiafonts" />
-   <package id="cascadiamono" />
-   <package id="cascadiamonoitalic" />
-   <package id="cascadiamonopl" />
-   <package id="cascadiamonopl-italic" />
-   <package id="checksum" />
-   <package id="choco-cleaner" />
    <package id="chocolatey" />
    <package id="chocolatey-compatibility.extension" />
    <package id="chocolatey-core.extension" />
    <package id="chocolatey-dotnetfx.extension" />
    <package id="chocolatey-font-helpers.extension" />
-   <package id="chocolatey-visualstudio.extension" />
    <package id="chocolatey-windowsupdate.extension" />
-   <package id="chocolateygui" />
    <package id="cloc" />
-   <package id="cmake" />
-   <package id="cmake.install" />
-   <package id="Cmder" />
    <package id="coretemp" />
    <package id="cpu-z" />
    <package id="cpu-z.install" />
    <package id="cyg-get" />
    <package id="Cygwin" />
+   <package id="dasel" />
    <package id="dngrep" />
-   <package id="dos2unix" />
-   <package id="dotcover-cli" />
+   <package id="DotNet4.6.1" />
+   <package id="dotnet-6.0-desktopruntime" />
+   <package id="dotnet-6.0-sdk" />
+   <package id="dotnet-6.0-sdk-4xx" />
    <package id="dotnet-7.0-desktopruntime" />
+   <package id="dotnet-8.0-aspnetruntime" />
+   <package id="dotnet-8.0-desktopruntime" />
+   <package id="dotnet-8.0-runtime" />
+   <package id="dotnet-8.0-sdk" />
+   <package id="dotnet-8.0-sdk-1xx" />
+   <package id="dotnet-8.0-sdk-2xx" />
    <package id="dotnet-desktopruntime" />
-   <package id="DotNet4.5.2" />
-   <package id="dotnet4.7.1" />
-   <package id="dotnetfx" />
-   <package id="dotpeek.portable" />
-   <package id="equalizerapo" />
-   <package id="eventghost" />
+   <package id="dotnet-sdk" />
+   <package id="dotPeek" />
    <package id="f.lux" />
    <package id="f.lux.install" />
    <package id="fastcopy" />
    <package id="fastcopy.portable" />
    <package id="fiddler" />
    <package id="filezilla" />
-   <package id="FiraCode" />
    <package id="Firefox" />
-   <package id="font-hackgen" />
-   <package id="font-hackgen-nerd" />
    <package id="gawk" />
    <package id="git" />
-   <package id="git-credential-manager-for-windows" />
    <package id="git.install" />
+   <package id="github-desktop" />
    <package id="golang" />
    <package id="GoogleChrome" />
-   <package id="googler" />
    <package id="greenshot" />
    <package id="grep" />
    <package id="html-tidy" />
-   <package id="httpie" />
-   <package id="httpmaster-express" />
    <package id="hwmonitor" />
    <package id="hxd" />
-   <package id="ilspy" />
    <package id="javaruntime" />
    <package id="jdk8" />
    <package id="jetbrainsmono" />
@@ -83,10 +64,9 @@
    <package id="KB3035131" />
    <package id="KB3063858" />
    <package id="KB3118401" />
-   <package id="LinkShellExtension" />
+   <package id="librespeed-cli" />
    <package id="logitechgaming" />
    <package id="lua" />
-   <package id="magicsplat-tcl-tk" />
    <package id="meld" />
    <package id="microsoft-teams" />
    <package id="miktex" />
@@ -104,11 +84,8 @@
    <package id="nvs" />
    <package id="openhardwaremonitor" />
    <package id="openssh" />
-   <package id="openssl" />
-   <package id="perfview" />
-   <package id="postman" />
+   <package id="pdftk" />
    <package id="powershell-core" />
-   <package id="powertoys" />
    <package id="procexp" />
    <package id="procmon" />
    <package id="putty" />
@@ -118,38 +95,32 @@
    <package id="python2" />
    <package id="python3" />
    <package id="python311" />
+   <package id="python312" />
+   <package id="qttabbar" />
    <package id="rainmeter" />
+   <package id="resharper-platform" />
    <package id="ruby" />
    <package id="ruby.install" />
    <package id="sed" />
    <package id="slack" />
    <package id="soapui" />
-   <package id="SourceCodePro" />
-   <package id="sourcetree" />
    <package id="sql-server-management-studio" />
-   <package id="strawberryperl" />
    <package id="telnet" />
-   <package id="tortoisegit" />
    <package id="treesizefree" />
    <package id="universal-ctags" />
    <package id="vcredist140" />
    <package id="vcredist2005" />
    <package id="vcredist2010" />
    <package id="vcredist2015" />
-   <package id="vcredist2017" />
    <package id="vim" />
-   <package id="visualstudio-installer" />
-   <package id="visualstudio2017buildtools" />
-   <package id="visualstudio2019-remotetools" />
    <package id="vlc" />
    <package id="vlc.install" />
-   <package id="vscode" />
-   <package id="vscode.install" />
    <package id="Wget" />
    <package id="windirstat" />
    <package id="WinPcap" />
    <package id="winscp" />
    <package id="winscp.install" />
    <package id="wireshark" />
+   <package id="xml-notepad" />
    <package id="zoom" />
 </packages>
