--- a/Windows/Chocolatey/packages_work.config
+++ b/Windows/Chocolatey/packages_work.config
@@ -5,8 +5,11 @@
    <package id="adexplorer" />
    <package id="adobereader" />
    <package id="autohotkey.portable" />
+   <package id="azure-data-studio" />
+   <package id="azuredatastudio-powershell" />
    <package id="azure-functions-core-tools" />
    <package id="chocolatey" />
+   <package id="chocolatey-azuredatastudio.extension" />
    <package id="chocolatey-compatibility.extension" />
    <package id="chocolatey-core.extension" />
    <package id="chocolatey-dotnetfx.extension" />
@@ -34,6 +37,7 @@
    <package id="dotnet-desktopruntime" />
    <package id="dotnet-sdk" />
    <package id="dotPeek" />
+   <package id="doxygen.portable" />
    <package id="f.lux" />
    <package id="f.lux.install" />
    <package id="fastcopy" />
