Rainmeter network Monitor

--- a/Rainmeter/Skins/Network/Network - Copy.ini
+++ b/Rainmeter/Skins/Network/Network - Copy.ini
@@ -51,8 +51,10 @@ Substitute="":"N/A"
 ; Get the IP address
 [MeasureInternIP]
 Measure=Plugin
-Plugin=SysInfo
+Plugin=Plugins\SysInfo.dll
 SysInfoType=IP_ADDRESS
+SysInfoData=[MeasureChangeNIC]
+DynamicVariables=1
 Group=MainMeasures
 
 ; Parse the IP address and keep the first octet, if empty assign to 127
